bazel: support more flexible --test_filter
GitOrigin-RevId: 47e574095cda0cb278f1d7b267ebe3cb347ffbbd